# RNN_p

./: CMakeLists.txt  README.md  config.txt  config_example_file.txt  hello.cpp  main.cpp  rnn_parallel.pbs  seeds.txt
data/: NewEngland_df.csv
src/: main.cpp
src/dataframe/: DataFrame.cpp  DataFrame.h
src/linalg/: AlgebraicOperations.cpp  AlgebraicOperations.h  Matrix.cpp  Matrix.h  Vector.cpp  Vector.h
src/models/: LinearModel.cpp  LinearModel.h  Recurrent.cpp  Recurrent.h
src/preprocessing/: Scaler.cpp  Scaler.h
src/utils/: utils.cpp  utils.h
